# context-window-packer-py

./: README.md  pyproject.toml
src/context_window_packer/: __init__.py  pack.py
tests/: test_pack.py
